resolved padding from panel from collapse

--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,8 @@ p,
 span {
   margin: 0;
 }
+
+.ant-collapse-content-box{
+  margin: 0 !important;
+  padding: .5rem !important;
+}
